large refactorization, added service layer, ui changes